--- a/sample/src/main/resources/templates/index.mustache
+++ b/sample/src/main/resources/templates/index.mustache
@@ -9,13 +9,23 @@
 
     <h1>스프링 부트로 시작하는 웹 서비스ver.2</h1>
     <div class ="col-md-12">
+        <!--로그인 기능영역-->
         <div class="row">
             <div class="col-md-6">
                 <a href="/posts/save" role="button"
                    class="btn btn-primary">글등록</a>
+                {{#username}}
+                    Logged in as: <span id="user">{{username}}</span>
+                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                {{/username}}
+                {{^userName}}
+                    <a href="/oauth2/authorization/google"
+                       class="btn btn-success active" role="button">Google Login</a>
+                {{/userName}}
             </div>
         </div>
         <br>
+
         <!--목록 영역 출력 -->
         <table class="table table-horizontal table-bordered">
             <thead class="thead-strong">
